--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_AUTH0_REDIRECT_URI=http://localhost:8081/books
 REACT_APP_AUTH0_DOMAIN=dev-afdxlgqz0ita765l.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=Ihi6R7ZnCvgLvFpPdXVqr2Ry0c85LRD2
+REACT_APP_API_URL=http://localhost:8080/graphql
+REACT_APP_AUTH0_AUDIENCE=https://dev-afdxlgqz0ita765l.us.auth0.com/api/v2/
